Add create connection

--- a/package.json
+++ b/package.json
@@ -17,8 +17,12 @@
 	},
 	"dependencies": {
 		"3d-force-graph": "^1.71.2",
+		"@nextui-org/react": "^1.0.0-beta.12",
 		"@tanstack/react-query": "^4.28.0",
+		"@types/dompurify": "^3.0.0",
 		"axios": "^1.3.4",
+		"dompurify": "^3.0.1",
+		"next-themes": "^0.2.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-query": "^3.39.3",
