--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,8 @@
 	"rules": {
 		"prettier/prettier": ["error", { "singleQuote": true, "endOfLine": "auto" }],
 		"react/react-in-jsx-scope": "off",
-		"@typescript-eslint/promise-function-async": "off"
+		"@typescript-eslint/promise-function-async": "off",
+		"@typescript-eslint/explicit-function-return-type": "off",
+		"@typescript-eslint/no-misused-promises": "off"
 	}
 }
