--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,7 @@
 		"react/react-in-jsx-scope": "off",
 		"@typescript-eslint/promise-function-async": "off",
 		"@typescript-eslint/explicit-function-return-type": "off",
-		"@typescript-eslint/no-misused-promises": "off"
+		"@typescript-eslint/no-misused-promises": "off",
+		"@typescript-eslint/no-confusing-void-expression": "off"
 	}
 }
