--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 	},
 	"dependencies": {
 		"3d-force-graph": "^1.71.2",
+		"@auth0/auth0-react": "^2.0.1",
 		"@nextui-org/react": "^1.0.0-beta.12",
 		"@tanstack/react-query": "^4.28.0",
 		"@types/dompurify": "^3.0.0",
