--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,8 @@
 		"@typescript-eslint/promise-function-async": "off",
 		"@typescript-eslint/explicit-function-return-type": "off",
 		"@typescript-eslint/no-misused-promises": "off",
-		"@typescript-eslint/no-confusing-void-expression": "off"
+		"@typescript-eslint/no-confusing-void-expression": "off",
+		"@typescript-eslint/strict-boolean-expressions": "off",
+		"@typescript-eslint/prefer-ts-expect-error": "off"
 	}
 }
