--- a/package.json
+++ b/package.json
@@ -16,16 +16,17 @@
 		"src/**/*.{ts,tsx,json,md}": "prettier --write"
 	},
 	"dependencies": {
-		"3d-force-graph": "^1.71.2",
 		"@auth0/auth0-react": "^2.0.1",
 		"@nextui-org/react": "^1.0.0-beta.12",
 		"@tanstack/react-query": "^4.28.0",
 		"@types/dompurify": "^3.0.0",
+		"3d-force-graph": "^1.71.2",
 		"axios": "^1.3.4",
 		"dompurify": "^3.0.1",
 		"next-themes": "^0.2.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-force-graph": "^1.42.1",
 		"react-query": "^3.39.3",
 		"react-router-dom": "^6.10.0",
 		"sparql-http-client": "^2.4.2",
