--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
 		"build": "tsc && vite build",
 		"preview": "vite preview",
 		"lint": "eslint \"src/**/*.{ts,tsx}\" --fix",
-		"format": "prettier --write \"src/**/*.{ts,tsx,json,md}\""
+		"format": "prettier --write \"src/**/*.{ts,tsx,json,md}\"",
+		"generate:types": "orval --config ./orval.config.ts && yarn run lint && yarn run format"
 	},
 	"lint-staged": {
 		"src/**/*.{ts,tsx}": "eslint --fix",
@@ -18,16 +19,20 @@
 	"dependencies": {
 		"3d-force-graph": "^1.71.2",
 		"@auth0/auth0-react": "^2.0.1",
-		"@nextui-org/react": "^1.0.0-beta.12",
+		"@nextui-org/react": "^1.0.0-beta.13",
 		"@tanstack/react-query": "^4.28.0",
 		"@types/dompurify": "^3.0.0",
 		"axios": "^1.3.4",
 		"dompurify": "^3.0.1",
+		"i18next": "^23.4.0",
 		"next-themes": "^0.2.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-error-boundary": "^4.0.10",
+		"react-i18next": "^13.0.2",
 		"react-query": "^3.39.3",
 		"react-router-dom": "^6.10.0",
+		"react-select": "^5.7.4",
 		"sparql-http-client": "^2.4.2",
 		"three": "^0.150.1",
 		"vite-plugin-ejs": "^1.6.4",
@@ -52,6 +57,7 @@
 		"eslint-plugin-react": "^7.32.2",
 		"husky": "^8.0.3",
 		"lint-staged": "^13.2.0",
+		"orval": "^6.17.0",
 		"prettier": "^2.8.7",
 		"typescript": "4.9",
 		"vite": "^4.2.1"
