--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
 		"src/**/*.{ts,tsx,json,md}": "prettier --write"
 	},
 	"dependencies": {
-		"3d-force-graph": "^1.71.2",
 		"@auth0/auth0-react": "^2.0.1",
 		"@nextui-org/react": "^1.0.0-beta.13",
 		"@tanstack/react-query": "^4.28.0",
@@ -29,6 +28,7 @@
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-error-boundary": "^4.0.10",
+		"react-force-graph": "^1.43.0",
 		"react-i18next": "^13.0.2",
 		"react-query": "^3.39.3",
 		"react-router-dom": "^6.10.0",
