Load images and links

--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
 		"react-router-dom": "^6.10.0",
 		"react-select": "^5.7.4",
 		"sparql-http-client": "^2.4.2",
-		"three": "^0.150.1",
+		"three": "^0.155.0",
+		"three-spritetext": "^1.8.1",
 		"vite-plugin-ejs": "^1.6.4",
 		"vite-plugin-node-polyfills": "^0.7.0"
 	},
